--- a/app/templates/search.hbs
+++ b/app/templates/search.hbs
@@ -1,60 +1,23 @@
 {{page-title (t "search")}}
-<div class="auk-u-maximize-height auk-scroll-wrapper">
-  <Auk::Navbar @skin="gray-100">
-    <Auk::Toolbar @auto={{true}} as |Toolbar|>
-      <Toolbar.Group @position="left" as |Group|>
-        <Group.Item>
-          <h2 data-test-route-search-title class="auk-toolbar__title">
-            {{capitalize (t "search")}}
-          </h2>
-        </Group.Item>
-        <Group.Item>
-          <Auk::Tabs as |Tabs|>
-            {{! Page-number reset when clicking a search type.
-                It is assumed that users don't want
-                to go back and forth between search results
-                for the different types while keeping the
-                page-number. }}
-            <Tabs.Tab
-              @route="search.agenda-items"
-              @current-when="search.agenda-items"
-              @query={{hash page=0}}
-            >
-              {{t "agendaitems"}}
-            </Tabs.Tab>
-            <Tabs.Tab
-              @route="search.cases"
-              @current-when="search.cases"
-              @query={{hash page=0}}
-            >
-              {{t "cases"}}
-            </Tabs.Tab>
-          </Auk::Tabs>
-        </Group.Item>
-      </Toolbar.Group>
-    </Auk::Toolbar>
-  </Auk::Navbar>
-
+<div class="au-c-search-container">
   <Auk::Navbar>
-    <form {{on "submit" this.search}} class="auk-o-grid auk-o-grid--align-end auk-u-maximize-width auk-u-mb-4 auk-u-mt-4">
-      <div class="auk-o-grid-col-4">
-        <div class="auk-form-group">
-          <div class="auk-o-flex auk-o-flex--align-baseline">
-            <Auk::Label for="keyword" class="auk-u-mr">
-              {{capitalize (t "keyword")}}
-            </Auk::Label>
-            <Utils::SearchTooltip />
-          </div>
-          <AuInput
-            data-test-route-search-input
-            @width="block"
-            @value={{this.searchTextBuffer}}
-            id="keyword"
-            placeholder={{t "search-placeholder"}}
-          />
+    <form {{on "submit" this.search}} class="au-u-flex au-u-flex--spaced-small au-u-flex--vertical-end auk-u-maximize-width auk-u-mb-4 auk-u-mt-4">
+      <div class="auk-form-group au-u-margin-bottom-none au-u-3-4">
+        <div class="auk-o-flex auk-o-flex--align-baseline">
+          <Auk::Label for="keyword" class="auk-u-mr">
+            {{capitalize (t "keyword")}}
+          </Auk::Label>
+          <Utils::SearchTooltip />
         </div>
+        <AuInput
+          data-test-route-search-input
+          @width="block"
+          @value={{this.searchTextBuffer}}
+          id="keyword"
+          placeholder={{t "search-placeholder"}}
+        />
       </div>
-      <div class="auk-o-grid-col-2">
+      {{!-- <div class="auk-o-grid-col-2">
         <div class="auk-form-group auk-u-position-relative" data-test-route-search-date-from>
           <Auk::Label>{{t "from"}}</Auk::Label>
           <Auk::Datepicker
@@ -88,8 +51,8 @@
             id="ministerName"
           />
         </div>
-      </div>
-      <div class="auk-o-grid-col-2">
+      </div> --}}
+      <div class="auk-form-group au-u-margin-bottom-none au-u-1-4">
         <AuButton
           data-test-route-search-trigger
           @skin="primary"
@@ -102,9 +65,7 @@
       </div>
     </form>
   </Auk::Navbar>
-  <div class="auk-scroll-wrapper__body">
-    <div class="auk-u-m-4">
-      {{outlet}}
-    </div>
+  <div class="au-c-search-container__content au-u-background-gray-100">
+    {{outlet}}
   </div>
 </div>
