--- a/app/components/documents/document-card.hbs
+++ b/app/components/documents/document-card.hbs
@@ -29,9 +29,13 @@
               class="auk-h4"
               data-test-document-card-name-value
             >
-              {{#let (or this.piece.file.derived.extension this.piece.file.extension) as |extension|}}
-                {{this.piece.name}}.{{extension}}
-              {{/let}}
+              {{#if this.loadFiles.isRunning}}
+                <AuLoader @padding="small"/>
+              {{else}}
+                {{#let (or this.piece.file.derived.extension this.piece.file.extension) as |extension|}}
+                  {{this.piece.name}}.{{extension}}
+                {{/let}}
+              {{/if}}
             </LinkTo>
             <div class="vlc-document-card-content__meta">
               {{! no piece.created in legacy data }}
