--- a/app/templates/search/cases.hbs
+++ b/app/templates/search/cases.hbs
@@ -59,34 +59,34 @@
                 <option value="alleministers">Alle ministers</option>
                 <optgroup label="Huidige ministers">
                   <option id="ember148">
-                    Jan Jambo
+                    Jan Jambon
                   </option>
                   <option id="ember149">
-                    Hilde Crevit
+                    Hilde Crevits
                   </option>
                   <option id="ember150">
-                    Bart Somer
+                    Bart Somers
                   </option>
                   <option id="ember151">
-                    Ben Weyt
+                    Ben Weyts
                   </option>
                   <option id="ember152">
-                    Zuhal Demi
+                    Zuhal Demir
                   </option>
                   <option id="ember153">
-                    Matthias Diependael
+                    Matthias Diependaele
                   </option>
                   <option id="ember154">
-                    Lydia Peeter
+                    Lydia Peeters
                   </option>
                   <option id="ember155">
-                    Benjamin Dall
+                    Benjamin Dalle
                   </option>
                   <option id="ember156">
-                    Jo Broun
+                    Jo Brouns
                   </option>
                 </optgroup>
-                <optgroup label="Huidige ministers">
+                <optgroup label="Vorige ministers">
                   <option id="ember265">
                     Paul Akkermans
                   </option>
