--- a/app/components/agenda/agenda-header/agenda-tabs.hbs
+++ b/app/components/agenda/agenda-header/agenda-tabs.hbs
@@ -25,4 +25,7 @@
   <Auk::Tab @route="agenda.documents">
     {{t "documents"}}
   </Auk::Tab>
+  <Auk::Tab @route="agenda.notes">
+    Notulen
+  </Auk::Tab>
 </Auk::Tabs>
