update no content alert

--- a/app/templates/agenda/notes.hbs
+++ b/app/templates/agenda/notes.hbs
@@ -86,7 +86,7 @@
           </div>
           {{else}}
           <AuAlert
-            @title="Geen inhoud"
+            @title="Nog geen tekst toegevoegd"
             @icon="circle-info"
             @skin="info"
             @size="small"
