change pill size

--- a/app/templates/publications/overview/start.hbs
+++ b/app/templates/publications/overview/start.hbs
@@ -48,7 +48,7 @@
               <a href="#!">Documentnaam</a>
             </td>
             <td class="au-u-text-left">
-              <AuPill>BVR</AuPill>
+              <AuPill @size="small">BVR</AuPill>
             </td>
             <td>
               Minister
