make pill editable by default

--- a/app/templates/agenda/notes.hbs
+++ b/app/templates/agenda/notes.hbs
@@ -71,7 +71,7 @@
             </div>
             <WebComponents::VlRdfaEditor
               data-test-newsletter-edit-item-rdfa-editor
-              @richtext="{{this.richtext}}"
+              @richtext={{this.richtext}}
               @handleRdfaEditorInit={{this.handleRdfaEditorInit}}
             />
           </div>
